add novas linhas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Do While</title>
   </head>
   <body>
+    <h1>jsnjsndfs</h1>
+    <h2>jhfjkdsfjksd</h2>
     <script src="guess-the-number.js"></script>
   </body>
 </html>
